--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: portfolio
-author: GitHub User
-email: your-email@domain.com
+author: yooyouny
+email: jhjin2u@gmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
